--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,14 @@
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-api</artifactId>
+            <version>1.10.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-suite-engine</artifactId>
-            <version>1.13.1</version>
+            <version>1.10.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
